# clarifai_tutorial

./: main.py  pi_capture.py  pyproject.toml  test.txt  ultrasonic.py  ultrasonic.py.save
training_us/: 1.txt  2.txt
